GitOps/apps/base/meme-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-website
spec:
  selector:
    app: meme-website
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
